# edu-sim-autonomous-driving

./: Dockerfile  README.md  docker-compose.yml
ros2_ws/: .gitignore
ros2_ws/install/self-driving-sim/share/self-driving-sim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/clothoid_motion_planner/: CMakeLists.txt  package.xml
ros2_ws/src/clothoid_motion_planner/include/clothoid_motion_planner/: clothoid_motion_planner.hpp  clothoid_path.hpp
ros2_ws/src/clothoid_motion_planner/src/: clot_motion_planner_node.cpp  clothoid_motion_planner.cpp  clothoid_path.cpp  main.cpp
ros2_ws/src/clothoid_planner_test/: CMakeLists.txt
ros2_ws/src/clothoid_planner_test/include/clothoid_planner/: clothoid_path.hpp
ros2_ws/src/clothoid_planner_test/src/: clothoid_path.cpp  main.cpp
ros2_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/custom_interfaces/msg/: ControlInputs.msg  VehicleState.msg  VehicleStates.msg
ros2_ws/src/scripts/self-driving-sim/: simulator_config.toml
ros2_ws/src/scripts/self-driving-sim/surr_vehicles_config/: scene1.toml
ros2_ws/src/self-driving-sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/self-driving-sim/self-driving-sim/: config.py  dynamics.py  simulator.py  simulator_config.toml
ros2_ws/src/self-driving-sim/self-driving-sim/surr_vehicles_config/: scene2.toml
ros2_ws/src/self_driving_sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/self_driving_sim/config/: simulator_config.toml
ros2_ws/src/self_driving_sim/config/surr_vehicles_config/: scene1.toml  scene2.toml
ros2_ws/src/self_driving_sim/launch/: launch.py
ros2_ws/src/self_driving_sim/rviz/: config.rviz
ros2_ws/src/self_driving_sim/self_driving_sim/: config.py  dynamics.py  simulator.py  simulator_node.py
